fix css selector

--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -13,6 +13,6 @@
 }
 
 .input:focus,
-input:focus-visible {
-  outline: 4px auto var(--primary-color-outline);
+.input:focus-visible {
+  outline: 4px auto var(--primary-color-outline);  
 }
